--- a/main_src/main.module.css
+++ b/main_src/main.module.css
@@ -21,7 +21,7 @@ row{
   background-color: #03dbfc; 
   color: white; 
   margin-bottom: 0px; 
-  font-size: 80px
+  font-size: 80px;
 }
 
 .nav{
@@ -44,7 +44,7 @@ row{
 }
 
 .logout{
-  height: 60px; 
+  height: 40px; 
   width: 200px; 
   margin-right: 20px; 
   background-color: #03dbfc; 
@@ -72,11 +72,16 @@ button.logout:hover{
   transition: .5s;
   cursor: pointer;
 }
+
 .navbar{
   display: flex;
   margin: auto;
   background-color: #03dbfc;
-  margin-bottom: "0px"
+  margin-bottom: "0px";
+  position: relative;
+  z-index: 0;
+  width: 100%;
+  align-content: center;
 }
 
 .makeapp{
@@ -86,6 +91,7 @@ button.logout:hover{
   color: white;
   background-color: rgb(255, 47, 193);
   border-width: 0px;
+  font-weight: 700;
   cursor: pointer;
 }
 
@@ -95,49 +101,132 @@ button.makeapp:active{
 }
 
 button.makeapp:hover{
-  background-color: rgb(206, 47, 255);
+  background-color: purple;
   transition: .5s;
 }
 
-.helpbtn{
+.tipimage{
+  height: 200px;
+  width: 200px;
+  align-content: center;
+}
+
+.prevtip{
+  height: 30px;
+  width: 80px;
+  margin-right: 80px;
+  border-radius: 10px;
+  color: white;
   background-color: #03dbfc;
-  border-width: 0px; 
-  margin-right: 300px;
-  position: relative;
-  display: inline-block;
-  cursor: pointer;
+  border-width: 0px;
+  font-weight: 700;
+}
+.prevtip:hover{background-color: #1e90ff;}
+
+.prevtip:disabled{background-color: grey;}
+
+.prevtip:disabled:hover{background-color: grey;}
+
+.nexttip{
+  height: 30px;
+  width: 80px;
+  border-radius: 10px;
+  color: white;
+  background-color: #03dbfc;
+  border-width: 0px;
+  font-weight: 700;
 }
 
-.helpbtn:hover{
-  height: 60px;
-  width: 60px;
+.nexttip:hover{background-color: #1e90ff;}
 
-}
+.nexttip:disabled{background-color: grey;}
 
-.helpimg{
-  height: 50px; 
-  width: 50px;
-}
+.nexttip:disabled:hover{background-color: grey;}
 
-.helpimg:hover{
-  height: 60px;
-  width: 60px;
-}
+ul{list-style-type: none;}
 
-.help{
-  position: relative;
-  display: inline-block;
-}
-
-.help_content{
-  display: none;
-  position: absolute;
-  background-color: black;
-  width: 100px;
-  height: 100px;
-  z-index: 1;
-}
-
-.showhelp{
+.tipon{
   display: block;
+  margin-left: 100px;
+}
+
+.tipoff{
+  display: none;
+}
+
+.outer_circle{
+  height: 280px;
+  width: 280px;
+  border-radius: 50%;
+  background-color: silver;
+  justify-content: center;
+}
+
+.health_image{
+  position: absolute;
+  height: 100px;
+  width: 100px;
+  top: 100px;
+  left: 90px;
+  background-color: transparent;
+}
+
+.notification{
+  position: absolute;
+  height: 50px;
+  width: 50px;
+  top: 30px;
+  left: 260px;
+}
+
+label{
+  font-size: 15px;
+  color: white;
+}
+
+input{
+  font-size: 15px;
+  height: 30px;
+}
+
+input:focus{
+  outline-color:white;
+}
+
+input.submit:hover{
+  color: black;
+}
+
+select{
+  height: 45px;
+  width: 90px;
+  font-size: 30px;
+  margin-right: 20px;
+  font-weight: 700;
+  border-width: 0px;
+  margin-top: 6px;
+  background-color: #03dbfc;
+  color: white;
+  text-align: center;
+}
+
+.add{
+  height: 40px;
+  width: 180px;
+  font-size: 25px;
+  font-weight: 700;
+  border-radius: 10px;
+  background-color: #03dbfc;
+  color: white;
+  border-width: 0px;
+  margin-top: 0px;
+  margin-left: 70px;
+}
+
+.add:hover{
+  background-color: #1e90ff;
+}
+
+section{
+  background-color: white;
 }
